		put_revision: add a revision (after adding files)
		cert: create certificate
		db_set: set a database variable
		db_get: query a database variable

	* cmd_automate.cc: raise interface version

	* tests/automate_cert/*,
	  tests/automate_db_set,get/__driver__.lua,
	  tests/automate_put_file/__driver__.lua,
	  tests/automate_put_revision/__driver__.lua:
		tests for the new features

2006-12-18  Christof Petig <christof.petig@arcor.de>

	* basic_io.hh (peek): use widen to distinguish '\xff' and EOF
	* basic_io.cc (binary_transparency): add an unit test for this

2006-12-18  Matt Johnston  <matt@ucc.asn.au>

	* work.cc (get_revision_id): check that the workspace revision
	exists here (so that codepaths such as "log" will also hit it).

2006-12-16  Joel Rosdahl  <joel@rosdahl.net>

	* po/sv.po: Corrections of Swedish translation.

2006-12-16  Matt Johnston  <matt@ucc.asn.au>

	* cmd_list.cc: ls_known, ls_changed: sort path output.

2006-12-15  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Add a few more normalization tests for things like
	"foo/.".

2006-12-15  Derek Scherger  <derek@echologic.com>

	* monotone.cc (cpp_main): indent try/catch block properly

2006-12-15  Nathaniel Smith  <njs@pobox.com>

	* tests/fail_cleanly_when__MTN_format_empty: Rename to...
	* tests/fail_cleanly_when__MTN_format_corrupt: ...this, and
	add a few more test cases.

2006-12-15  Tero Koskinen  <tero.koskinen@iki.fi>

	* work_migration.cc (get_ws_format): Fail cleanly when _MTN/format
	is broken.
	* tests/fail_cleanly_when__MTN_format_empty: Test.

2006-12-14  Thomas Keller  <me@thomaskeller.biz>

	* work.cc: handle missing directories properly in 
        classify_roster_paths
        * automate.cc: trailing slash also for missing directories
        * tests/...: adapted automate_inventory test which now tests
        for unknown, added (but missing) and dropped (uncommitted) dirs

2006-12-14  Thomas Keller  <me@thomaskeller.biz>

	* POTFILES.in: added missing restrictions.cc