@@ -15,6 +15,8 @@
 	  tests/automate_put_revision/__driver__.lua:
 		tests for the new features
 
+	* monotone.texi: document new commands
+
 2006-12-18  Christof Petig <christof.petig@arcor.de>
 
 	* basic_io.hh (peek): use widen to distinguish '\xff' and EOF
